--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<dockerImageName>${dockerUserName}/${project.artifactId}</dockerImageName>
+		 <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>
 	</properties>
 	<dependencies>
 		<dependency>
