--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,4 +1,5 @@
 name: spring-boot-docker-kubernetes
+
 on:
   push:
     branches: [ "main" ]
@@ -6,14 +7,15 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-spring-boot-docker-kubernetes:
-    name: Build spring-boot-docker-kubernetes
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      # -------------------------------------------------
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # -------------------------------------------------
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
@@ -21,13 +23,19 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build with Maven
+      # -------------------------------------------------
+      - name: Maven verify (root project)
         run: ./mvnw -ntp verify
+        # ← runs in the checkout root (no working-directory needed)
 
-      - name: Build and Publish Docker Image
-        if: ${{ github.ref == 'refs/heads/main' }}
+      # -------------------------------------------------
+      - name: Build & push Docker image (only on main)
+        if: github.ref == 'refs/heads/main'
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          ./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_USERNAME }}/spring-boot-docker-kubernetes
-          docker push ${{ secrets.DOCKER_USERNAME }}/spring-boot-docker-kubernetes
-s
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+          ./mvnw spring-boot:build-image \
+            -Dspring-boot.build-image.imageName=$DOCKER_USERNAME/demo-api
+          docker push $DOCKER_USERNAME/demo-api
