--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,5 @@
-name: Demo API
+name: spring-boot-docker-kubernetes
+
 on:
   push:
     branches: [ "main" ]
@@ -6,13 +7,8 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build-demo-api:
-    name: Build demo-api
+  build:
     runs-on: ubuntu-latest
-
-    defaults:
-      run:
-        working-directory: ./demo-api
 
     steps:
       - name: Checkout repository
@@ -25,12 +21,16 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
 
-      - name: Build with Maven
+      - name: Maven Verify
         run: ./mvnw -ntp verify
 
-      - name: Build and Publish Docker Image
-        if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Build & Push Docker Image
+        if: github.ref == 'refs/heads/main'
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          ./mvnw spring-boot:build-image -Dspring-boot.build-image.imageName=${{ secrets.DOCKER_USERNAME }}/demo-api
-          docker push ${{ secrets.DOCKER_USERNAME }}/demo-api
+          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+          ./mvnw spring-boot:build-image \
+            -Dspring-boot.build-image.imageName=$DOCKER_USERNAME/demo-api
+          docker push $DOCKER_USERNAME/demo-api
