--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Set up JDK 21
@@ -24,13 +24,13 @@ jobs:
       - name: Maven Verify
         run: ./mvnw -ntp verify
 
-      - name: Build & Push Docker Image
+      - name: Build & Push with Jib
         if: github.ref == 'refs/heads/main'
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
         run: |
-          echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-          ./mvnw spring-boot:build-image \
-            -Dspring-boot.build-image.imageName=$DOCKER_USERNAME/demo-api
-          docker push $DOCKER_USERNAME/demo-api
+          ./mvnw compile jib:build \
+            -Djib.to.image=$DOCKER_USERNAME/demo-api \
+            -Djib.to.auth.username=$DOCKER_USERNAME \
+            -Djib.to.auth.password=$DOCKER_PASSWORD
