--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,11 @@ jobs:
         if: github.ref == 'refs/heads/main'
         run: |
           mkdir -p ~/.m2
-          cat > ~/.m2/settings.xml << EOF
+          cat > ~/.m2/settings.xml << 'EOF'
           <settings>
             <servers>
               <server>
-                <id>docker.io</id>
+                <id>registry-1.docker.io</id>
                 <username>${{ secrets.DOCKER_USERNAME }}</username>
                 <password>${{ secrets.DOCKER_PASSWORD }}</password>
               </server>
